--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ uvicorn = "^0.22.0"
 python-multipart = "^0.0.6"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
